[add] adition for v4

--- a/index.html
+++ b/index.html
@@ -23,5 +23,10 @@
     <p>commit 1</p>
     <p>commit 2</p>
     <p>commit 3</p>
+
+    <h1>Version 3</h1>
+    <p>commit 1</p>
+    <p>commit 2</p>
+    <p>commit 3</p>
   </body>
 </html>
